--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -19,6 +19,7 @@
 
                 &__brandLink {
                     width: 60%;
+                    filter: invert(100%);
                 }
             }
         }
