--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,12 +1,54 @@
 .hero {
     width: 100vw;
     height: 100vh;
-    background-image: url(../images/fundo_confete.png);
 
     &__happyBday {
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
+        margin-top: 90px;
+    }
+
+    &__form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 auto;
+        gap: 16px;
+        width: 40%;
+        text-align: center;
+
+        &__input {
+            width: 60%;
+            padding: 5px;
+            text-align: center;
+        }
+    }
+
+    &__btn {
+        display: block;
+        width: 30%;
+        padding: 5px;
+        margin: 0 auto;
+        margin-top: 16px;
+        border-radius: 16px;
+    }
+
+    &__counter {
+        text-align: center;
+        margin-top: 60px;
+
+        &__faltam {
+            margin-bottom: 40px;
+        }
+        
+        &__data {
+            padding: 16px;
+            border-radius: 50px;
+            background: linear-gradient(0deg, #665500 0%, #9e8300 53%, #d0ad00 100%);
+            box-shadow: 0px 5px 16px 0px #000;
+
+        }
     }
 }
