--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,8 @@
 
 body {
     background-image: url(../images/fundo.png);
-    background-size: cover;
+    background-size: cover; 
+    background-position: center;
 }
 
 .container {
@@ -46,11 +47,20 @@ body {
 
 .fontFifth {
     color: #fff;
-    font-size: 0.8em;
+    font-size: 0.9em;
+    letter-spacing: 2px;
 }
 
 .fontSixth {
     color: #fff;
-    font-size: 2em;
+    font-weight: 900;
+    letter-spacing: 3px;
+    font-size: 2.5em;
+}
+
+.fontSeventh {
+    color: #d0ad00;
+    font-weight: 900;
+    letter-spacing: 3px;
 }
 
